--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,84 +1,11 @@
 <% include partials/header %>
-  <div class="container">
-      1. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      2. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      3. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      4. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      5. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      6. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      7. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      8. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-  <div class="container">
-      9. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam sint voluptates sed facere, possimus porro delectus et nemo officia commodi nobis quidem deleniti? Voluptates vero iusto, ex molestias fuga facilis!
-  </div>
-    
+
+<div class="jumbotron w-75 p-3 mx-auto">
+    <div class="container text-center">
+        <h1 class="display-4">Where Pets Find Their People</h1>
+        <p class="lead">Thousands of adoptable pets are looking for people. People like you.</p>
+        <a class="btn btn-outline-primary" href="#" role="button"><i class="fas fa-paw"></i> Add a new pet</a>
+    </div>
+</div>
+
 <% include partials/footer %>
