edit new dog form

--- a/views/pets/index.ejs
+++ b/views/pets/index.ejs
@@ -1,6 +1,6 @@
 <% include ../partials/header %>
 
-<div class="jumbotron w-75 p-3 mx-auto">
+<div class="jumbotron p-3">
     <div class="container text-center">
         <h1 class="display-4">Where Dogs Find Their People</h1>
         <p class="lead">Thousands of adoptable dogs are looking for people. People like you.</p>
