--- a/views/pets/new.ejs
+++ b/views/pets/new.ejs
@@ -1,75 +1,110 @@
 <% include ../partials/header %>
 
-<div class="container w-25">
+<div class="container">
     <form action="/pets" method="POST">
-        <div class="form-group">
-            <input class="form-control" type="text" name="name" placeholder="name">
+
+        <div class="row text-center pb-4 pt-2">
+            <div class="col">
+                <h2 class="display-5"><i class="fas fa-paw"></i> Add A New Dog For Adoption:</h1>
+            </div>
         </div>
 
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="age" id="puppy" value="puppy" class="custom-control-input">
-            <label class="custom-control-label" for="puppy">Puppy</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="age" id="adult" value="adult" class="custom-control-input">
-            <label class="custom-control-label" for="adult">Adult</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="age" id="senior" value="senior" class="custom-control-input">
-            <label class="custom-control-label" for="senior">Senior</label>
-        </div>
-
-        <br>
-
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="gender" id="male" value="male" class="custom-control-input">
-            <label class="custom-control-label" for="male">Male</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="gender" id="female" value="female" class="custom-control-input">
-            <label class="custom-control-label" for="female">Female</label>
+        <div class="row justify-content-around">
+            <div class="col-sm-5">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="name" placeholder="name">
+                </div>
+            </div>
+            <div class="col-sm-5 ">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="breed" placeholder="breed">
+                </div>
+            </div>
         </div>
 
-        <br>
-
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="size" id="small" value="small" class="custom-control-input">
-            <label class="custom-control-label" for="small">Small</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="size" id="medium" value="medium" class="custom-control-input">
-            <label class="custom-control-label" for="medium">Medium</label>
-        </div>
-        <div class="custom-control custom-radio custom-control-inline">
-            <input type="radio" name="size" id="large" value="large" class="custom-control-input">
-            <label class="custom-control-label" for="large">Large</label>
-        </div>
-        </span>
-
-        <div class="form-group">
-            <input class="form-control" type="text" name="breed" placeholder="breed">
+        <div class="row justify-content-around">
+            <div class="col-sm-5">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="location" placeholder="location address">
+                </div>
+            </div>
+            <div class="col-sm-5 ">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="image" placeholder="image url">
+                </div>
+            </div>
         </div>
 
-        <div class="form-group">
-            <input class="form-control" type="text" name="location" placeholder="location address">
+        <div class="row pl-2">
+            <div class="col pl-5">
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="age" id="puppy" value="puppy" class="custom-control-input">
+                    <label class="custom-control-label" for="puppy">Puppy</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="age" id="adult" value="adult" class="custom-control-input">
+                    <label class="custom-control-label" for="adult">Adult</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="age" id="senior" value="senior" class="custom-control-input">
+                    <label class="custom-control-label" for="senior">Senior</label>
+                </div>
+            </div>
         </div>
 
-        <div class="form-group">
-            <input class="form-control" type="text" name="image" placeholder="image url">
+        <div class="row pl-2">
+            <div class="col pl-5">
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="gender" id="male" value="male" class="custom-control-input">
+                    <label class="custom-control-label" for="male">Male</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="gender" id="female" value="female" class="custom-control-input">
+                    <label class="custom-control-label" for="female">Female</label>
+                </div>
+            </div>
         </div>
 
-        <div class="form-group">
-            <textarea class="form-control" rows="8" id="comment" name="description" placeholder="description"></textarea>
+        <div class="row pl-2">
+            <div class="col pl-5">
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="size" id="small" value="small" class="custom-control-input">
+                    <label class="custom-control-label" for="small">Small</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="size" id="medium" value="medium" class="custom-control-input">
+                    <label class="custom-control-label" for="medium">Medium</label>
+                </div>
+                <div class="custom-control custom-radio custom-control-inline">
+                    <input type="radio" name="size" id="large" value="large" class="custom-control-input">
+                    <label class="custom-control-label" for="large">Large</label>
+                </div>
+            </div>
         </div>
 
-        <div class="form-group">
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Submit!</button>
+        <div class="row justify-content-around pt-3">
+            <div class="col-11">
+                <div class="form-group">
+                    <textarea class="form-control" rows="6" name="description" placeholder="description"></textarea>
+                </div>
+            </div>
         </div>
 
+        <div class="row justify-content-around">
+            <div class="col-2">
+                <div class="form-group">
+                    <button class="btn btn-lg btn-primary" type="submit">Submit!</button>
+                </div>
+            </div>
+        </div>
 
     </form>
 
-    <a href="/pets">Go Back</a>
+    <div class="row">
+        <div class="col">
+            <a href="/pets">Go Back</a>
+        </div>
+    </div>
 
 </div>
 
