--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -2,3 +2,12 @@ body {
     padding-top: 65px; 
 }
 
+.my-container {
+    border: 1px solid green;
+}
+.my-row {
+    border: 3px solid red;
+}
+.my-col {
+    border: 3px dotted blue;
+}
