--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -4,7 +4,7 @@
     <div class="container text-center">
         <h1 class="display-4">Where Dogs Find Their People</h1>
         <p class="lead">Thousands of adoptable dogs are looking for people. People like you.</p>
-        <a class="btn btn-outline-primary" href="/pets/new" role="button"><i class="fas fa-paw"></i> Add a new dog</a>
+        <a class="btn btn-outline-primary" href="/dogs/new" role="button"><i class="fas fa-paw"></i> Add a new dog</a>
     </div>
 </div>
 
