--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -11,7 +11,7 @@
 
     <div id="landing-header">
  		<h1>Welcome to PetFinder!</h1>
-		<a href="/pets" class="btn btn-lg btn-success">View All Pets For Adoption</a>
+		<a href="/dogs" class="btn btn-lg btn-success">View All Pets For Adoption</a>
     </div>
     
     <ul class="slideshow">
