--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -8,4 +8,20 @@
     </div>
 </div>
 
+<div class="text-cebter">
+    <% dogs.forEach(dog => { %>
+        <h4><%= dog.name %></h4>
+        <div class="card" style="width: 18rem;">
+            <img src="<%= dog.image %>" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title"><%= dog.name %></h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+                    content.</p>
+                <a href="#" class="btn btn-primary">Go somewhere</a>
+            </div>
+        </div>
+    <% }); %>
+</div>
+
+
 <% include ../partials/footer %>
