--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -38,15 +38,15 @@
         <div class="row pl-2">
             <div class="col pl-5">
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[age]" id="puppy" value="puppy" class="custom-control-input" required>
+                    <input type="radio" name="dog[age]" id="puppy" value="Puppy" class="custom-control-input" required>
                     <label class="custom-control-label" for="puppy">Puppy</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[age]" id="adult" value="adult" class="custom-control-input">
+                    <input type="radio" name="dog[age]" id="adult" value="Adult" class="custom-control-input">
                     <label class="custom-control-label" for="adult">Adult</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[age]" id="senior" value="senior" class="custom-control-input">
+                    <input type="radio" name="dog[age]" id="senior" value="Senior" class="custom-control-input">
                     <label class="custom-control-label" for="senior">Senior</label>
                 </div>
             </div>
@@ -55,11 +55,11 @@
         <div class="row pl-2">
             <div class="col pl-5">
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[gender]" id="male" value="male" class="custom-control-input" required>
+                    <input type="radio" name="dog[gender]" id="male" value="Male" class="custom-control-input" required>
                     <label class="custom-control-label" for="male">Male</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[gender]" id="female" value="female" class="custom-control-input">
+                    <input type="radio" name="dog[gender]" id="female" value="Female" class="custom-control-input">
                     <label class="custom-control-label" for="female">Female</label>
                 </div>
             </div>
@@ -68,15 +68,15 @@
         <div class="row pl-2">
             <div class="col pl-5">
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[size]" id="small" value="small" class="custom-control-input" required>
+                    <input type="radio" name="dog[size]" id="small" value="Small" class="custom-control-input" required>
                     <label class="custom-control-label" for="small">Small</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[size]" id="medium" value="medium" class="custom-control-input">
+                    <input type="radio" name="dog[size]" id="medium" value="Medium" class="custom-control-input">
                     <label class="custom-control-label" for="medium">Medium</label>
                 </div>
                 <div class="custom-control custom-radio custom-control-inline">
-                    <input type="radio" name="dog[size]" id="large" value="large" class="custom-control-input">
+                    <input type="radio" name="dog[size]" id="large" value="Large" class="custom-control-input">
                     <label class="custom-control-label" for="large">Large</label>
                 </div>
             </div>
