edit dogs/edit page

--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -12,8 +12,8 @@
 <div class="container">
     <div class="row text-center">
         <% dogs.forEach(dog => { %>
-        <div class="col-lg-3 col-md-4 col-sm-6 mb-4">
-            <div class="card ml-3">
+        <div class="col-lg-4 col-sm-6 mb-4">
+            <div class="card h-100 ml-3">
                 <img src="<%= dog.image %>" class="card-img-top" alt="<%= dog.name %>">
                 <div class="card-body">
                     <h5 class="card-title"><%= dog.name %></h5>
