--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,13 +1,21 @@
-body { 
-    padding-top: 65px; 
+body {
+    padding-top: 65px;
 }
 
 .my-container {
     border: 1px solid green;
 }
+
 .my-row {
     border: 3px solid red;
 }
+
 .my-col {
     border: 3px dotted blue;
+}
+
+.text-center .card-img-top {
+    width: 100%;
+    height: 40vh;
+    object-fit: cover;
 }
