--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -3,7 +3,7 @@
 <div class="container">
     <div class="row justify-content-around">
         <div class="col-7">
-            <div class="card ml-3">
+            <div class="card ml-3 mb-3">
                 <img src="<%= dog.image %>" class="card-img-top" alt="<%= dog.name %>">
                 <div class="card-body">
                     <h3 class="card-title"><%= dog.name %></h3>
@@ -11,11 +11,26 @@
                         <ul class="list-inline">
                             <em>
                                 <li class="list-inline-item"><%= dog.breed %></li>
-                                <li class="list-inline-item"><%= dog.address %></li>
+                                <li class="list-inline-item"><i class="fas fa-paw"></i></li>
+                                <li class="list-inline-item"> <%= dog.address %></li>
                             </em>
                         </ul>
+                        <hr>
+                        <ul class="list-inline">
+                            <li class="list-inline-item"><%= dog.age %></li>
+                            <li class="list-inline-item"><i class="fas fa-paw"></i></li>
+                            <li class="list-inline-item"> <%= dog.gender %></li>
+                            <li class="list-inline-item"><i class="fas fa-paw"></i></li>
+                            <li class="list-inline-item"> <%= dog.size %></li>
+                        </ul>
+                        <hr>
+                        <h4>Meet <%= dog.name %></h4>
+                        <p><%= dog.description %></p>
                     </p>
-                    <a href="/dogs/<%= dog._id %>" class="btn btn-primary">More Info</a>
+                    <a class="btn btn-warning" href="/dogs/<%= dog._id %>/edit">Edit</a>
+                    <form action="/dogs/<%= dog._id %>?_method=DELETE" method="POST" class="d-inline">
+                        <button class="btn btn-danger">Delete</button>
+                    </form>
                 </div>
             </div>
         </div>
