--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -14,8 +14,16 @@ body {
     border: 3px dotted blue;
 }
 
+.card {
+    border: 2px solid rgba(0, 0, 0, 0.125);
+}
+
+.border {
+    border: 2px solid rgba(0, 0, 0, 0.125) !important;
+}
+
 .text-center .card-img-top {
     width: 100%;
-    height: 40vh;
+    height: 30vh;
     object-fit: cover;
 }
