--- a/views/dogs/index.ejs
+++ b/views/dogs/index.ejs
@@ -8,13 +8,12 @@
     </div>
 </div>
 
-
 <div class="container">
     <div class="row text-center">
         <% dogs.forEach(dog => { %>
-        <div class="col-lg-4 col-sm-6 mb-4">
-            <div class="card h-100 ml-3">
-                <img src="<%= dog.image %>" class="card-img-top" alt="<%= dog.name %>">
+        <div class="col-sm-6 col-md-4 col-xl-3 mb-4">
+            <div class="card">
+                <img src="<%= dog.image %>" class="card-img-top border" alt="<%= dog.name %>">
                 <div class="card-body">
                     <h5 class="card-title"><%= dog.name %></h5>
                     <p class="card-text">
