--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Find A Pet</title>
+        <title>Find A Friend</title>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
@@ -10,8 +10,8 @@
     
 
     <div id="landing-header">
- 		<h1>Welcome to PetFinder!</h1>
-		<a href="/dogs" class="btn btn-lg btn-success">View All Pets For Adoption</a>
+ 		<h1>Welcome to FriendFinder!</h1>
+		<a href="/dogs" class="btn btn-lg btn-success">View All Dogs For Adoption</a>
     </div>
     
     <ul class="slideshow">
