--- a/views/dogs/edit.ejs
+++ b/views/dogs/edit.ejs
@@ -102,7 +102,7 @@
 
     <div class="row">
         <div class="col">
-            <a href="/dogs">Go Back</a>
+            <a href="/dogs/<%= dog.id %>">Go Back</a>
         </div>
     </div>
 
