--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -36,9 +36,9 @@
         </div>
     </div>
 
-    <div class="row">
+    <div class="row ml-4">
         <div class="col">
-            <a href="/dogs">Go Back</a>
+            <a class="btn btn-dark btn-sm" href="/dogs">Go Back</a>
         </div>
     </div>
 
