--- a/views/dogs/new.ejs
+++ b/views/dogs/new.ejs
@@ -101,9 +101,9 @@
 
     </form>
 
-    <div class="row">
+    <div class="row ml-4">
         <div class="col">
-            <a href="/dogs">Go Back</a>
+            <a class="btn btn-dark btn-sm" href="/dogs">Go Back</a>
         </div>
     </div>
 
