add register, login pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand" href="/dogs"><i class="fas fa-dog"></i> Find A Friend</a>
@@ -23,8 +22,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav ml-auto">
-                    <a class="nav-item nav-link" href="/login">Login</a>
-                    <a class="nav-item nav-link" href="/signup">Sign Up</a>
+                    <a class="nav-item nav-link" href="/users/login">Login</a>
+                    <a class="nav-item nav-link" href="/users/register">Register</a>
                 </div>
             </div>
         </div>
