--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -22,8 +22,14 @@ body {
     border: 2px solid rgba(0, 0, 0, 0.125) !important;
 }
 
-.text-center .card-img-top {
+.all-dogs {
     width: 100%;
-    height: 30vh;
+    height: 35vh;
+    object-fit: cover;
+}
+
+.show-dog {
+    width: 100%;
+    height: 80vh;
     object-fit: cover;
 }
