--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -5,22 +5,23 @@
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title text-center mb-3"><i class="fas fa-sign-in-alt"></i> Login</h1>
-
+                <% include ../partials/messages %>
                 <form action="/users/login" method="POST">
                     <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="user[email]" class="form-control" placeholder="Enter Email" required />
+                        <label for="username">Username</label>
+                        <input type="name" id="username" name="username" class="form-control"
+                            placeholder="Enter Username" required />
                     </div>
                     <div class="form-group">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="user[password]" class="form-control"
+                        <input type="password" id="password" name="password" class="form-control"
                             placeholder="Enter Password" required />
                     </div>
                     <button type="submit" class="btn btn-primary btn-block">Login</button>
                 </form>
 
                 <p class="lead mt-4">
-                        No Account? <a href="/users/register" class="card-link">Register</a>
+                    No Account? <a href="/users/register" class="card-link">Register</a>
                 </p>
             </div>
         </div>
