--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -5,10 +5,10 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
         <link rel="stylesheet" href="/stylesheets/landing.css">
         <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript" async></script>
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
     </head>
     <body>
     
-
     <div id="landing-header">
  		<h1>Welcome to FriendFinder!</h1>
 		<a href="/dogs" class="btn btn-lg btn-success">View All Dogs For Adoption</a>
