--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -10,7 +10,7 @@
                     <div class="form-group">
                         <label for="username">Username</label>
                         <input type="name" id="username" name="user[username]" class="form-control" placeholder="Enter username"
-                            value="<%= typeof username != 'undefined' ? user.username : '' %>" required />
+                            value="<%= typeof username != 'undefined' ? username : '' %>" required />
                     </div>
                     <div class="form-group">
                         <label for="password">Create Password</label>
