--- a/views/dogs/show.ejs
+++ b/views/dogs/show.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row justify-content-around">
-        <div class="col-7">
+        <div class="col-8">
             <div class="card ml-3 mb-3">
                 <img src="<%= dog.image %>" class="card-img-top show-dog" alt="<%= dog.name %>">
                 <div class="card-body">
@@ -35,6 +35,28 @@
                         <button class="btn btn-danger">Delete</button>
                     </form>
                     <% } %>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row justify-content-around">
+        <div class="col-8">
+            <div class="card ml-3 mb-3">
+                <div class="card-body">
+                    <div class="text-right">
+                        <a href="/dogs/<%= dog._id %>/comments/new" class="btn btn-success active" role="button"
+                            aria-pressed="true">Add New Comment</a>
+                    </div>
+                    <p class="card-text">
+                        <% dog.comments.forEach( comment => { %>
+                        <div class="d-inline"> <%= comment.text %></div>
+                        <div class="d-inline float-right">10 Days Ago</div>
+                        <div class="comment">
+                            <small>Comment Author</small>
+                        </div>
+                        <% }); %>
+                    </p>
                 </div>
             </div>
         </div>
